--- a/App2/packages.config
+++ b/App2/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Coding4Fun.Toolkit.Audio" version="2.0.8" targetFramework="wpa81" />
+  <package id="Coding4Fun.Toolkit.Complete" version="2.1.6" targetFramework="wpa81" />
+  <package id="Coding4Fun.Toolkit.Controls" version="2.1.7" targetFramework="wpa81" />
+  <package id="Coding4Fun.Toolkit.Net" version="2.0.8" targetFramework="wpa81" />
+  <package id="Coding4Fun.Toolkit.Storage" version="2.0.8" targetFramework="wpa81" />
   <package id="Facebook" version="6.8.0" targetFramework="wpa81" />
   <package id="Facebook.Client" version="1.0.2" targetFramework="wpa81" />
   <package id="jQuery" version="2.0.0" targetFramework="wpa81" />
